# migr_deport_interactive

./: .gitignore  README.md  biome.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
data/: aggregate_for_viz.py  check_unique.py  check_viz_data.py  clean.py  create_sankey_data.py  create_timeline_data.py  data_analysis_beforeviz.py  data_viewers.ipynb  geocode.py  main_clean.py
data/processing/: __init__.py  aggregate_flows.py  clean_ice.py  clean_migration.py  create_detention_journey.py  create_sankey.py  create_timeline.py  geocode.py
milestones/: interactive-draft.md  interactive-proposal.md
www/: detention_journey.js  index.html  main.js  migration.js  sankey.js  style.css  timeline.js
www/data/: detention_highlights.json  detention_statistics.json  flow_data.json  migration_data.json  sankey_data.json  timeline_data.json  timeline_data_by_country.json  top_destinations.json
