[project]
name = "migr_deport_interactive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "fastexcel>=0.18.0",
    "geopy>=2.4.1",
    "ipykernel>=7.1.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "polars>=1.35.2",
]
